# Major_Project

./: .gitignore  README.md  api_server.py  create_dataset.py  debug_piper.py  evaluate.py  evaluation_results.csv  evaluation_summary.json  gradio_app.py  judge.py  knowledge_base.db-shm  main.py  pyproject.toml  requirements.txt  setup_offline.py  setup_voices.py  streamlit_app.py  test_dataset.csv
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/voice/: route.ts
components/: chat-message.tsx  dashboard.tsx  document-list.tsx  file-upload-area.tsx  image-zoom-modal.tsx  knowledge-base.tsx  navbar.tsx  processing_results.tsx  quick-action-card.tsx  stat-card.tsx  study-room.tsx  theme-provider.tsx  voice-input.tsx
data/images/: README.md
data/pdfs/: README.md
src/audio/: speech_to_text.py  text_to_speech.py
src/llm/: gpt4all_handler.py
src/rag/: image_processor.py  retrieval.py  text_processor.py  vector_db.py
src/utils/: config.py  graph_retrieval.py  knowledge_graph.py  logger.py  mmr_ranker.py  performance_monitor.py
